src/main/webapp/form/eCARES/eCARES_v1.css
/*
 *
 * Copyright (c) 2001-2002. Department of Family Medicine, McMaster University. All Rights Reserved. *
 * This software is published under the GPL GNU General Public License.
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version. *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details. * * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA. *
 *
 * <OSCAR TEAM>
 *
 * This software was written for the
 * Department of Family Medicine
 * McMaster University
 * Hamilton
 * Ontario, Canada
 */

body {
    padding: 0px; /* Messaging padding remove onprint */
    padding-right: 0px !important;
    margin-right: 0px !important;
}

table#clinical-frailty-score-table th {
    padding: 0px !important;
    text-align: center !important;
    padding-bottom: 4px !important;
}

table#clinical-frailty-score-table {
    border: 2px solid #aaa;
}

div#frailty-index-container {
    border: black thin solid !important;
    padding: 5px 10px 5px 10px !important;
}

input[type='radio'] {
    height: 12px !important;
}

.patient-info-bar {
    position: fixed;
    height: 50px;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: hsl(0, 0%, 98%);
    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

.emotional-row label input[type='radio'] {
    margin: 0;
}

.emotional-row label span,
.immunization-row label span {
    margin-left: -3px;
}

.justify-end {
    justify-content: flex-end;
}

.justify-center {
    justify-content: center;
}

textarea {
    border: thin solid #aaa;
    resize: none;
    width: 100%;
}

.font-bold {
    font-weight: bold;
}

.font-normal {
    font-weight: normal;
}


.text-underline {
    text-decoration: underline;
}

.valign-middle {
    vertical-align: middle;
}

.valign-bottom {
    vertical-align: bottom;
}

.valign-top {
    vertical-align: top;
}

.list-style-none {
    list-style: none;
}

.p-0 {
    padding: 0;
}

.ml-1 {
    margin-left: -3px;
}

.m-0 {
    margin: 0 !important;
}

.ml-1 {
    margin-left: 5px;
}

.mb-4 {
    margin-bottom: 25px;
}

.ml-2 {
    margin-left: 10px;
}

.ml-3 {
    margin-left: 15px;
}

.mr-2 {
    margin-right: 10px;
}

.mr-4 {
    margin-right: 25px;
}

.mt-4 {
    margin-top: 20px !important;
}

.ml-4 {
    margin-left: 25px;
}

.mt-2 {
    margin-top: 10px;
}

.pl-2 {
    padding-left: 10px;
}

.pb-1 {
    padding-bottom: 5px;
}

.pb-2 {
    padding-bottom: 10px;
}

.pr-2 {
    padding-right: 10px;
}

.pl-1 {
    padding-left: 5px;
}

.pr-1 {
    padding-right: 5px;
}

.ml-4 {
    margin-left: 25px;
}

.pl-4 {
    padding-left: 25px;
}

.pl-6 {
    padding-left: 40px;
}

.ml-6 {
    margin-left: 40px;
}

.pl-8 {
    padding-left: 83px;
}

.ml-8 {
    margin-left: 80px;
}

.px-1 {
    padding: 0 5px;
}

.w-full {
    width: 100%;
}

.h-full {
    height: 100%;
}

.main-container {
    padding-top: 60px;
    max-width: 1100px;
    min-width: 1100px;
    width: 100%;
    margin: 0 auto;
    font-size: 14px;
}

.clinical-frailty-title-container {
    background-color: black !important;
    color: white !important;
    text-align: center;
    font-weight: bold;
    margin: 0;
}

.patient-info-input {
    border: 0;
}

.w-si {
    width: 75px;
}

.h-si {
    height: 18px;
}

.inline-block {
    display: inline-block;
}

.border-right-gray {
    border-right: 2px solid #aaa;
}

.border-top-gray {
    border-top: 2px solid #aaa;
}

.border-left-gray {
    border-left: 2px solid #aaa;
}

.border-bottom-gray {
    border-bottom: 2px solid #aaa;
}

.mw-9 {
    min-width: 95px
}

.w-9 {
    width: 95px;
}

.w-10 {
    width: 100px;
}

.flex-1 {
    flex: 1 1 0%;
}

.flex-2 {
    flex: 2 1 0%;
}

.flex-8 {
    flex: 8 1 0%;
}

.ecares-input {
    box-shadow: none;
    border: 0;
    border-bottom: 1px dashed black;
    border-radius: 0;
}

.flex {
    display: flex;
}

.flex-col {
    flex-direction: column;
}

.items-center {
    align-items: center;
}

.items-end {
    align-items: flex-end;
}

label {
    margin: 0;
    padding: 0;
}

.form-title {
    font-size: 2rem;
    font-weight: bold;
    text-decoration: underline;
}

.action-container {
    border: 2px solid black;
    padding: 0 50px 0 5px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 50px;
    margin-right: 10px;
}

.ccga-hr {
    padding: 0;
    margin: 2px 0;
    border-bottom: 2px solid gray;
}

.top-controls {
    position: fixed !important;
    bottom: 0px;
    width: 100% !important;
    display: inline-block;
    z-index: 2;
    left: 0;
    right: 0;
    padding: 10px;
    background-color: #f5f5f5;
    border-top: 1px solid #e3e3e3;
}

.form-container {
    left: 0;
    top: 0;
}

/*
*
	CONTAINERS

*
*/

.container-fluid {
    margin-bottom: 60px;
}

.center-container {
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

.controls-container {
    padding: 10px;
}

/*
*
	TABLES
*
*/
table {
    border-collapse: collapse !important;
    width: 100%;
}

.table td {
    border: 0 !important;
    padding: 2px !important;
}

#clinical-frailty-score-table tr td:nth-child(2),
#clinical-frailty-score-table tr td:nth-child(3) {
    text-align: center
}

/*
*
	TYPOGRAPHY
*
*/
.text-black {
    color: #000
}

.text-secondary {
    color: #444
}

/*
*
	CURSOR
*
*/
.not-allowed {
    cursor: not-allowed;
}

/*
*
	FORM ELEMENTS
*
*/
svg {
    display: none;
    cursor: pointer;
    cursor: hand;
}

/*.action-required {
	display: none
}*/

select {
    display: block;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;
    padding: 1px;
    box-sizing: border-box;
    border: 0px solid #aaa;
    box-shadow: 0 0px 0 0px rgba(0, 0, 0, .04);
    border-radius: 0;
    -moz-appearance: none; /* Use these on print */
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
}

.top-line-grey {
    border-top: 2px solid #aaa;
}

.bottom-line-grey {
    border-bottom: 2px solid #aaa;
}

.left-line-grey {
    border-left: 2px solid #aaa;
}

.right-line-grey {
    border-right: 2px solid #aaa;
}

.info-listitem {
    margin: 10px 0;
}

.info-listitem button {
    margin-top: 10px;
    margin-right: 10px;
}

.info-listitem-disabled {
    text-decoration: line-through;
    text-decoration-color: red;
}

.info-listitem-disabled strong {
    font-weight: normal !important;
}

/*
*
	MESSAGING
*
*/
.alert {
    -webkit-border-radius: 0 !important;
    -moz-border-radius: 0 !important;
    border-radius: 0 !important;
    z-index: 999;
}

.alert-default {
    background-color: #fff /* default fill */
}

.alert-static {
    position: fixed;
    top: 0px;
    width: 100%
}

/*
*
Bootstrap 3 Modal Open shift left issue - START
*
*/
.modal {
    overflow-y: auto !important;
}

.modal-open {
    overflow: auto !important;
}

/*
*
Bootstrap 3 Modal Open shift left issue - END
*
*/

/* 
*
	FOR TESTING ONLY START
*
*/

.form-container {
    background-color: #fff;
}

.bg-t1 {
    background-color: red
}

.bg-t2 {
    background-color: blue
}

label {

}

.inline-block {
    display: inline-block;
}

.text-center {
    text-align: center;
}


.pd-none {
    display: none;
}

.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
    float: none !important;
}

.ecares-hr {
    padding: 0;
    margin: 0;
    height: auto;
    border: 1px solid #aaa;
    box-sizing: border-box !important;
}

.is-invalid {
    border-color: red;
}


@media print {
    .pd-none, .pbtn-group, .info-listitem-disabled {
        display: none;
    }

    .container-fluid {
        max-width: 990px;
        margin: 0 auto;
    }

    body {
        padding: 0px;
        font-size: 12px !important;
        /* zoom:110%; /* may need adjusting */
    }

    h4 {
        font-size: 18px;
        color: #000 !important
    }

    .bottom-line {
        border: none !important;
        border-bottom: thin solid #000 !important;
    }

    .center-container {
        position: relative;

    }

    .form-container {
        border: 0;
    }

    table {
        border-collapse: collapse !important;
    }

    table tr, table tr td {
        padding: 0px !important;
        margin: 0px !important;
    }

    .text-muted {
        color: #000 !important
    }

    .hidden-print {
        display: none;
    }

    /* clear display margin */
    .center-container {
        margin: 0px;
    }

    [type="checkbox"], [type="radio"] {
        margin: 0px;
    }

    select {
        display: block;
        font-size: inherit;
        font-family: inherit;
        line-height: inherit;
        padding: 1px;
        box-sizing: border-box;
        border: 0px solid #aaa;
        box-shadow: 0 0px 0 0px rgba(0, 0, 0, .04);
        border-radius: 0;
        -moz-appearance: none; /* Use these on print */
        -webkit-appearance: none;
        appearance: none;
        background-color: #fff;
    }

    input[type='radio'] {
        height: 10px !important;
    }
}

@page {
    /* size: A4 portrait; */
    size: auto;
    /* T R B L */
    margin: 15mm 5mm 5mm 15mm !important;
}

